package rina.messages;
//option optimize_for = LITE_RUNTIME;
import "ConnectionPoliciesMessage.proto";

message qosCube_t{									//a QoS cube specification
	required uint32 qosId = 1;						//Identifies the QoS cube
        optional string name = 2;                       // A human-readable name for the QoS cube
	optional uint64 averageBandwidth = 3;			//in bytes/s, a value of 0 indicates 'don't care'
	optional uint64 averageSDUBandwidth = 4;		//in bytes/s, a value of 0 indicates 'don't care'
	optional uint32 peakBandwidthDuration = 5;		//in ms, a value of 0 indicates 'don't care'
	optional uint32 peakSDUBandwidthDuration = 6;	//in ms, a value of 0 indicates 'don't care'
	optional double undetectedBitErrorRate = 7;		//a value of 0 indicates 'don`t care'
	optional bool partialDelivery = 8;				//indicates if partial delivery of SDUs is allowed or not
	optional bool order = 9;						//indicates if SDUs have to be delivered in order
	optional uint32 maxAllowableGapSdu = 10;        //indicates the maximum gap allowed in SDUs, a gap of N SDUs is considered the same as all SDUs delivered. A value of -1 indicates 'Any'
	optional uint32 delay = 11; 					//in milliseconds, indicates the maximum delay allowed in this flow. A value of 0 indicates don't care
	optional uint32 jitter = 12;					//in milliseconds, indicates indicates the maximum jitter allowed in this flow. A value of 0 indicates don't care
        optional dtpConfig_t dtpConfiguration = 13;                   //the DTP Configuration for this connectio
        optional dtcpConfig_t dtcpConfiguration = 14;                   //the DTCP Configuration for this connectio
}
